# rules_distroless

./: MODULE.bazel  WORKSPACE.bazel
apt/private/: BUILD.bazel  deb_import.bzl  deb_translate_lock.bzl  package_arch.BUILD.tmpl  resolve.bzl
examples/cuda/: BUILD.bazel  cuda.lock.json  cuda.yaml  test_linux_amd64.yaml  test_linux_arm64.yaml
examples/debian_snapshot/: BUILD.bazel
